@@ -8,6 +8,8 @@
       keeping them in memory and preventing DESTROY.  [rt.cpan.org 7032]
     - is_deeply() could confuse [] with a non-existing value
       [rt.cpan.org 7030]
+    - is_deeply() diagnostics a little off when scalar refs were inside
+      an array or hash ref [rt.cpan.org 7033]
     - Thanks to Fergal Daly for ferretting out all these is_deeply and eq_*
       tests.
 
